tests/ui/parse_key.stderr
error[E0609]: no field `s` on type `&'static str`
 --> tests/ui/parse_key.rs:4:17
  |
4 |     plist!({ "".s : true });
  |                 ^ unknown field
