tests/ui/parse_key.rs
use plist::plist;

fn main() {
    plist!({ "".s : true });
}
